# nvtop

./: .gitignore  CMakeLists.txt
.github/workflows/: compile.yml
include/nvtop/: interface_v2.h
src/: CMakeLists.txt  interface_v2.c  nvtop.c
